erDiagram
    VERSIONINFO {
        int Id PK
        string Version
        datetime AppliedAt
    }

    COMPANYINFO {
        guid Id PK
        string Name
        string Address
        string PostalCode
        string City
        string Email
        string PhoneNumber
        string CvrNumber
        boolean IsTaxRegistered
        boolean IsTaxUsedItem
    }

    VATRATES {
        guid Id PK
        string Name
        decimal RatePercent
        date EffectiveFrom
        date EffectiveTo
    }

    COMMISSION {
        guid Id PK
        float RateProcent
        date EffectiveFrom
        date EffectiveTo
    }

    SHELFTYPE {
        guid Id PK
        string Name
        string Description
    }

    SHELF {
        guid Id PK
        int Number "UNIQUE"
        guid ShelfTypeId FK
        int LocationX
        int LocationY
        boolean OrientationHorizontal
    }

    SHELFTENANT {
        guid Id PK
        string FirstName
        string LastName
        string Address
        string PostalCode
        string City
        string Email "UNIQUE"
        string PhoneNumber
        string Status
    }

    SHELFTENANTCONTRACT {
        guid Id PK
        guid ShelfTenantId FK
        int ContractNumber "UNIQUE"
        date StartDate
        date EndDate
        date CancelledAt
    }

    SHELFTENANTCONTRACTLINE {
        guid Id PK
        guid ShelfTenantContractId FK
        guid ShelfId FK
        int LineNumber 
        decimal PricePerMonth
        decimal PricePerMonthSpecial
    }

    SHELFPRICINGRULES {
        guid Id PK
        int MinShelvesInclusive
        decimal PricePerShelf
    }

    SALESRECEIPT {
        guid Id PK
        int ReceiptNumber "UNIQUE"
        datetime IssuedAt
        decimal TotalAmount
        decimal VatAmount
        boolean PaidByCash
        boolean PaidByMobile
    }

    SALESRECEIPTLINE {
        guid Id PK
        guid SalesReceiptId FK
        guid VatRatesId FK
        guid CommisionId FK
        guid ShelfId FK
        decimal UnitPrice
    }

    SHELFTYPE ||--o{ SHELF : has
    SHELFTENANT ||--o{ SHELFTENANTCONTRACT : has
    SHELFTENANTCONTRACT ||--o{ SHELFTENANTCONTRACTLINE : has
    SHELF ||--o{ SHELFTENANTCONTRACTLINE : referenced
    SALESRECEIPT ||--o{ SALESRECEIPTLINE : has
    VATRATES ||--o{ SALESRECEIPTLINE : referenced
    COMMISSION ||--o{ SALESRECEIPTLINE : referenced
    SHELF ||--o{ SALESRECEIPTLINE : referenced
